--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,11 @@
     <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Aqui se hara un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>    
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractivo e interesante del post </h1>
+            <p>Y este es el parrafo de inicio donde se explican las cosas increibles que se pueden realizar con ramas o branches in english</p>    
+        </div>
+    </div>
 </body>
 </html>
