--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,9 @@
     <div id="container">
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post </h1>
-            <p>Y este es el parrafo de inicio donde se explican las cosas increibles que se pueden realizar con ramas o branches in english</p>    
+            <p>Y este es el parrafo de inicio donde se explican las cosas increibles que se pueden realizar con ramas o branches in english</p> <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, dolor provident laborum tenetur quae consectetur sit atque necessitatibus quia placeat nisi doloribus voluptate culpa rem sequi. Adipisci iusto eius molestias!
+            </p>
         </div>
     </div>
 </body>
