--- a/blogpost.html
+++ b/blogpost.html
@@ -10,13 +10,13 @@
     <div id="container">
         <div id="cabecera">
             Cabecera
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post </h1>
             <p>Y este es el parrafo de inicio donde se explican las cosas increibles que se pueden realizar con ramas o branches in english</p> <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, dolor provident laborum tenetur quae consectetur sit atque necessitatibus quia placeat nisi doloribus voluptate culpa rem sequi. Adipisci iusto eius molestias!
-            </p>
+            </p><p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
