--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            <img id="logo" src="images/cohete.png" > 
+            Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
