--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
@@ -17,6 +17,9 @@
             <p>Y este es el parrafo de inicio donde se explican las cosas increibles que se pueden realizar con ramas o branches in english</p> <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, dolor provident laborum tenetur quae consectetur sit atque necessitatibus quia placeat nisi doloribus voluptate culpa rem sequi. Adipisci iusto eius molestias!
             </p><p>Suscribete y dale like</p>
+        </div>
+        <div id="footer">
+            Hecho con amor en Platzi :D    
         </div>
     </div>
 </body>
