Modificando la imagen no importa sino aparece en github

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post </h1>
             <p>Y este es el párrafo de inicio donde se explican las cosas increíbles que se pueden realizar con ramas o branches in english</p> <p>
-                <p><img src="https://i.imgur.com/4aVVXIt" width="100%" /></p>
+                <p><img src="images/elFerxxo.jpg" width="100%"></p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, dolor provident laborum tenetur quae consectetur sit atque necessitatibus quia placeat nisi doloribus voluptate culpa rem sequi. Adipisci iusto eius molestias!
             </p><p>Suscribete y dale like</p>
         </div>
